fix subtitle align, fix card-content padding, fix navigation width

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,7 @@ img {
 .navigation {
   display: flex;
   align-items: center;
-  width: 100%;
+  /* width: 100%; */
   color: #2e2f42;
   font-size: 16px;
   font-weight: 500;
@@ -123,6 +123,7 @@ img {
 .top-line .container {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .nav-menu {
@@ -298,6 +299,8 @@ img {
 
 .feature .subtitle {
   margin-bottom: 8px;
+  text-align: left;
+
 }
 
 
@@ -329,10 +332,6 @@ img {
 
 .team-card img {
   object-fit: cover;
-}
-
-.card-content {
-  padding: 32px 0;
 }
 
 .card-content .subtitle {
